--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,9 +14,11 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - name: Build image
-        run: docker build -t ${{secrets.REGISTRY_USERNAME}}/portfolio .
+        run: | 
+              docker build -t ${{secrets.USERNAME}}/portfolio:${{github.run_number}} .
+              docker build -t ${{secrets.USERNAME}}/portfolio .
       - name: Push image 
         run: |
-            docker login -u ${{secrets.REGISTRY_USERNAME}} -p ${{secrets.REGISTRY_PASS}}
-            docker push ${{secrets.REGISTRY_USERNAME}}/portfolio 
-            
+            docker login -u ${{secrets.USERNAME}} -p ${{secrets.REGISTRY_PASS}}
+            docker push ${{secrets.USERNAME}}/portfolio:${{github.run_number}}
+            docker push ${{secrets.USERNAME}}/portfolio
