--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,30 +10,50 @@ jobs:
   
   build:
    
-    runs-on: ubuntu-latest 
+    runs-on: ubuntu-latest  
     steps:
       - uses: actions/checkout@v4
+  
+      - name: Configure AWS credentials
+    uses: aws-actions/configure-aws-credentials@v4
+    with:
+      aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+      aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+      aws-region: ${{ secrets.AWS_REGION }}
+  
+      - name: Login to Amazon ECR
+      uses: aws-actions/amazon-ecr-login@v2
+  
       - name: Build image
-        run: | 
-              docker build -t ${{secrets.REGISTRY_USERNAME}}/portfolio:${{github.run_number}} .
-              docker build -t ${{secrets.REGISTRY_USERNAME}}/portfolio .
+    run: | 
+      docker build -t ${{secrets.ECR_REGISTRY}}/portfolio:${{github.run_number}} .
+      docker build -t ${{secrets.ECR_REGISTRY}}/portfolio:latest .
+   
       - name: Push image 
-        run: |
-            docker login -u ${{secrets.REGISTRY_USERNAME}} -p ${{secrets.REGISTRY_PASS}}
-            docker push ${{secrets.REGISTRY_USERNAME}}/portfolio:${{github.run_number}}
-            docker push ${{secrets.REGISTRY_USERNAME}}/portfolio
+    run: |
+      docker push ${{secrets.ECR_REGISTRY}}/portfolio:${{github.run_number}}
+      docker push ${{secrets.ECR_REGISTRY}}/portfolio:latest
 
-  deploy:
-    needs: build  
-    runs-on: ubuntu-latest
-    steps:
-      - name: SSH to Server
-        uses: appleboy/ssh-action@v1
-        with:
-          host: ${{ secrets.HOST }}
-          username: ${{ secrets.USERNAME }}
-          key: ${{ secrets.KEY }}
-         # port: ${{ secrets.PORT }}
-          script: | 
-                  docker rm -f resume
-                  docker run -d --name resume -p 8080:5001 ${{secrets.REGISTRY_USERNAME}}/portfolio:${{github.run_number}}
+deploy:
+  needs: build  
+  runs-on: ubuntu-latest
+  steps:
+    - name: Configure AWS credentials
+      uses: aws-actions/configure-aws-credentials@v4
+      with:
+        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        aws-region: ${{ secrets.AWS_REGION }}
+    
+    - name: Login to Amazon ECR
+      uses: aws-actions/amazon-ecr-login@v2
+    
+    - name: SSH to Server
+      uses: appleboy/ssh-action@v1
+      with:
+        host: ${{ secrets.HOST }}
+        username: ${{ secrets.USERNAME }}
+        key: ${{ secrets.KEY }}
+        script: | 
+          docker rm -f resume || true
+          docker run -d --name resume -p 8080:5001 ${{secrets.ECR_REGISTRY}}/portfolio:${{github.run_number}}
