--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,7 +9,6 @@ on:
 jobs:
   
   build:
-   
     runs-on: ubuntu-latest  
     steps:
       - uses: actions/checkout@v4
@@ -26,34 +25,43 @@ jobs:
   
       - name: Build image
         run: | 
-              docker build -t ${{secrets.ECR_REGISTRY}}/portfolio:${{github.run_number}} .
-              docker build -t ${{secrets.ECR_REGISTRY}}/portfolio:latest .
+          docker build -t ${{secrets.ECR_REGISTRY}}/portfolio:${{github.run_number}} .
+          docker build -t ${{secrets.ECR_REGISTRY}}/portfolio:latest .
    
+      # --- SIMPLE TRIVY SCAN STARTS HERE ---
+      - name: Scan with Trivy
+        uses: aquasecurity/trivy-action@master
+        with:
+          image-ref: '${{ secrets.ECR_REGISTRY }}/portfolio:${{ github.run_number }}'
+          exit-code: '1' # This will fail the job if any vulnerabilities are found
+      
+      # --- SIMPLE TRIVY SCAN ENDS HERE ---
+
       - name: Push image 
         run: |
-            docker push ${{secrets.ECR_REGISTRY}}/portfolio:${{github.run_number}}
-            docker push ${{secrets.ECR_REGISTRY}}/portfolio:latest
+          docker push ${{secrets.ECR_REGISTRY}}/portfolio:${{github.run_number}}
+          docker push ${{secrets.ECR_REGISTRY}}/portfolio:latest
 
-deploy:
-  needs: build  
-  runs-on: ubuntu-latest
-  steps:
-    - name: Configure AWS credentials
-      uses: aws-actions/configure-aws-credentials@v4
-      with:
-        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        aws-region: ${{ secrets.AWS_REGION }}
+  deploy:
+    needs: build  
+    runs-on: ubuntu-latest
+    steps:
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v4
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: ${{ secrets.AWS_REGION }}
     
-    - name: Login to Amazon ECR
-      uses: aws-actions/amazon-ecr-login@v2
+      - name: Login to Amazon ECR
+        uses: aws-actions/amazon-ecr-login@v2
     
-    - name: SSH to Server
-      uses: appleboy/ssh-action@v1
-      with:
-        host: ${{ secrets.HOST }}
-        username: ${{ secrets.USERNAME }}
-        key: ${{ secrets.KEY }}
-        script: | 
-          docker rm -f resume || true
-          docker run -d --name resume -p 8080:5001 ${{secrets.ECR_REGISTRY}}/portfolio:${{github.run_number}}
+      - name: SSH to Server
+        uses: appleboy/ssh-action@v1
+        with:
+          host: ${{ secrets.HOST }}
+          username: ${{ secrets.USERNAME }}
+          key: ${{ secrets.KEY }}
+          script: | 
+            docker rm -f resume || true
+            docker run -d --name resume -p 8080:5001 ${{secrets.ECR_REGISTRY}}/portfolio:${{github.run_number}}
