--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,8 +25,8 @@ jobs:
   
       - name: Build image
         run: | 
-          docker build -t ${{secrets.REGISTRY_USER}}/portfolio:${{github.run_number}} .
-          docker build -t ${{secrets.REGISTRY_USER}}/portfolio:latest .
+          docker build -t ${{secrets.REGISTRY_USER}}portfolio:${{github.run_number}} .
+          docker build -t ${{secrets.REGISTRY_USER}}portfolio:latest .
    
          # --- SIMPLE TRIVY SCAN STARTS HERE ---
       - name: Scan with Trivy
