--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -106,6 +106,8 @@ jobs:
 
     env:
 
+      # Job-level env (ok to keep); we'll ALSO set step-level env to ensure forwarding
+
       AWS_REGION: ${{ secrets.AWS_REGION }}
 
       ECR_REGISTRY: ${{ secrets.ECR_REGISTRY }}
@@ -120,6 +122,22 @@ jobs:
 
         uses: appleboy/ssh-action@v1
 
+        # Map secrets into step env (so they exist), then list them under `with.envs` to forward to remote
+
+        env:
+
+          AWS_REGION: ${{ secrets.AWS_REGION }}
+
+          ECR_REGISTRY: ${{ secrets.ECR_REGISTRY }}
+
+          ECR_REPOSITORY: portfoilo
+
+          VERSION_TAG: ${{ github.run_number }}
+
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+
         with:
 
           host: ${{ secrets.HOST }}
@@ -127,8 +145,6 @@ jobs:
           username: ${{ secrets.USERNAME }}
 
           key: ${{ secrets.KEY }}
-
-          # pass env vars into the remote shell
 
           envs: AWS_REGION,ECR_REGISTRY,ECR_REPOSITORY,VERSION_TAG,AWS_ACCESS_KEY_ID,AWS_SECRET_ACCESS_KEY
 
