--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -106,8 +106,6 @@ jobs:
 
     env:
 
-      # Job-level env (ok to keep); we'll ALSO set step-level env to ensure forwarding
-
       AWS_REGION: ${{ secrets.AWS_REGION }}
 
       ECR_REGISTRY: ${{ secrets.ECR_REGISTRY }}
@@ -121,8 +119,6 @@ jobs:
       - name: SSH to Server and deploy
 
         uses: appleboy/ssh-action@v1
-
-        # Map secrets into step env (so they exist), then list them under `with.envs` to forward to remote
 
         env:
 
@@ -145,6 +141,8 @@ jobs:
           username: ${{ secrets.USERNAME }}
 
           key: ${{ secrets.KEY }}
+
+          # forward these env vars into the remote shell
 
           envs: AWS_REGION,ECR_REGISTRY,ECR_REPOSITORY,VERSION_TAG,AWS_ACCESS_KEY_ID,AWS_SECRET_ACCESS_KEY
 
@@ -198,11 +196,9 @@ jobs:
 
             EOF
  
-            # Login to ECR and pull
+            # Login to ECR and pull (single line; no newline before the pipe)
 
-            aws ecr get-login-password --region "${AWS_REGION}" \
-
-              | docker login --username AWS --password-stdin "${ECR_REGISTRY}"
+            aws ecr get-login-password --region "${AWS_REGION}" | docker login --username AWS --password-stdin "${ECR_REGISTRY}"
 
             docker pull "${IMAGE}"
  
