--- a/.github/workflows/cicd2.yml
+++ b/.github/workflows/cicd2.yml
@@ -91,3 +91,4 @@ jobs:
             --registry-password ${{ secrets.ACR_PASSWORD }} \
             --ports 80 \
             --restart-policy Always
+            --os-type Linux
