--- a/.github/workflows/cicd2.yml
+++ b/.github/workflows/cicd2.yml
@@ -90,5 +90,5 @@ jobs:
             --registry-username ${{ secrets.ACR_USERNAME }} \
             --registry-password ${{ secrets.ACR_PASSWORD }} \
             --ports 80 \
-            --restart-policy Always
+            --restart-policy Always \
             --os-type Linux
