--- a/.github/workflows/cicd2.yml
+++ b/.github/workflows/cicd2.yml
@@ -91,4 +91,6 @@ jobs:
             --registry-password ${{ secrets.ACR_PASSWORD }} \
             --ports 80 \
             --restart-policy Always \
-            --os-type Linux
+            --os-type Linux \
+            --cpu 1 \
+            --memory 1
